# fastapi-purser

./: Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
app/: initializer.py  main.py
app/config/: __init__.py  application.py  db.py
app/core/exceptions/: exceptions.py
app/core/middleware/: middlewares.py
app/core/security/: auths.py
app/dbs/: mongo.py
app/routers/: __init__.py
app/routers/api/: __init__.py  deps.py
app/routers/health/: __init__.py
app/routers/login/: __init__.py
application/: main_web.py
application/config/: application.py  openapi.py
application/dbs/: __init__.py  mongo.py
application/domain/: types.py
application/domain/accounts/: __init__.py  defines.py  entities.py  repositories.py  servicies.py  types.py
application/domain/transactions/: __init__.py  defines.py  entities.py  repositories.py  servicies.py  types.py
application/domain/users/: __init__.py  entities.py  repositories.py  servicies.py  types.py
application/server/: app.py  initializer.py
application/server/config/: __init__.py  application.py  db.py  openapi.py
application/server/dbs/: mongo.py
application/server/routers/: __init__.py
application/tests/: client.py
application/tests/test_api/: test_app_status.py  test_hello.py
ddd/: types.py
docker/: Dockerfile  docker-compose-dev.yml
docker/application/: Dockerfile
docs/: index.md
tests/test_api/: test_hello.py
tests/test_ddd/: test_users.py
tests/test_domain/: test_users.py
tests/test_utils/: test_api_router.py
(+67 files in other folders)
