[tool.poetry]
name = "fastapi-purser"
version = "0.0.1"
description = "Example of using fastpai with ddd"
authors = ["chaotism"]
license = "MIT"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.10.8"
fastapi = "^0.44.0"
pydantic = "^1.1"
loguru = "^0.3.2"
email-validator = "^1.1.2"
motor = "^2.3.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.3"
pytest-asyncio = "^0.10.0"
pre-commit = "^1.20"
pytest-cov = "^2.8"
mkdocs = "^1.0"
mkdocs-material = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
